--- a/style.css
+++ b/style.css
@@ -1,130 +1,200 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Quicksand:wght@400;500&family=Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
+body {
+    margin:0;
+    padding:0;
+    overflow:hidden;
+    background-color:black;
 }
 
-html{
-    font-family:'Quicksand',sans-serif;
-}
-
-header { 
-    background-color: rgba(3, 3, 3, 0.7);
-    top: 0;
-    display: inline;
-}
-
-.headerPage{
-    background-color: #2c2a2f;
-}
-
-.header-image{
-    filter: blur(4px);
-    width: 100%;
-    background-position: center;
-  }
-
-#head-title {
-    position: absolute;
-    font-family: 'Dancing Script', 'Quicksand',sans-serif;
-    top: 40%;
-    left: 50%;
-    color: white;
-    transform: translate(-50%, -50%);
-    border: 5px solid #f1f1f1;
-    border-radius: 30px;
-    background-color: rgba(0,0,0, 0.5);
-    width: 50%;
-    padding: 20px;
-    font-size: 100px;
-    font-weight: 900;
-}
-nav {
-    background-color: rgba(0, 0, 0, 0.8);
-    position: sticky;
-    top: 0;
-    overflow: hidden;
-    text-align: center;
-    font-size: 20px;
-    
-}
-nav ul {
-    margin: 15px auto;
-    padding: 0 20px;
-    text-align: center;
-  }
-
-nav li {
-    display: inline-block;
-    font-family: 'Sriracha','Quicksand',sans-serif;
-    color: #d8eaee;
-    padding: 0 50px;
-    text-align: center;
-}
-
-
-main{
-    background-image: url(img/7e2ed43774233d26428175ab75b3.jpg);
-    margin: 0 auto;
-}
-
-section {
-    max-width: 800px;
-    display: block;
-    margin: 0 auto;
-}
-
-article {
-    background-color: white;
-    padding: 20px;
-    padding-top: 20px;
-    border-radius: 20px;
-    margin-top: 10px;
-}
-
-h1 {
-
-    font-family: 'Roboto', sans-serif, 'Times New Roman';
-    font-weight: bolder;
-    text-align: center;
-    font-size: 50px;
-}
-h3 {
-    font-size: 30px;
-    color: rgb(196, 28, 112);
-    text-align: center;
-}
-
-li:hover{
-    color: white;
-    cursor: pointer;
-    font-weight: bold;
-}
-
-a {
-    text-decoration: none;
-}
-
-p {
-    margin: 15px 0;
-    font-size: 15px;
-    text-indent: 30px;
-    text-align: justify;
-}
-
-form {
-    display: block;
-    text-align: center;
-}
-
-footer {
-    background-color: rgba(0, 0, 0, 0.9);
-    color: white;
-    text-align: center;
-    width: 100%;
-    display: block;
-    font-size: 20px;
+#vidBack {
+    position: fixed;
+    right: 0;
     bottom: 0;
+    min-height: 100%;
+    min-width: 100%;
+}
+    
+section{
+    height:100%;
+    width:100%;
+    position: fixed ; 
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
+#welcomeP {
+    background:radial-gradient(#333,#000);
+}
+
+.header {
+    position:absolute ;
+    top:25%;
+    width:100%;
+    font-family: 'Courgette', cursive;
+    text-align:center;
+    transform:translate ;
+    color: white;
+    transform:translateY (-50%);
+}
+
+#main {
+    top:20%;
+}
+    
+h1 {
+    font-size: 4.5em;
+    line-height: 70%;
+}
+
+h3 {
+    font-size: 2em;
+    line-height: 40%;
+}
+    
+button {
+    text-decoration: none;
+    background-color: transparent;
+    border-radius: 20px;
+    padding: 0.5em 1em;
+    cursor: pointer;
+    font-family: cursive;
+    font-weight: bold;
+    color: white;
+    font-size: 1em;
+    margin: 1.5em 2em;
+    border-color: white;
+    border-width: 10px;
+}
+
+button:hover {
+    font-size: 1.1em;
+    color: darkslategray;
+}
+
+#player {
+    min-width: 100px;
+}
+    
+.leaf{
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+}
+
+.leaf div{
+    position:absolute ;
+    display:block ;
+}
+
+.leaf div:nth-child(1){
+    left:30%; 
+    animation:fall 20s linear infinite ;
+    animation-delay:-2s;    
+}
+
+.leaf div:nth-child(2){
+    left:70%; 
+    animation:fall 20s linear infinite ;
+    animation-delay:-4s;
+ }
+
+.leaf div:nth-child(3){
+    left:5%; 
+    animation:fall 25s linear infinite ;
+    animation-delay:-7s;   
+}
+
+.leaf div:nth-child(4){
+    left:60%; 
+    animation:fall 23s linear infinite ; 
+    animation-delay:-5s;
+}
+
+.leaf div:nth-child(5){
+    left:80%; 
+    animation:fall 19s linear infinite ;
+    animation-delay:-5s;
+}
+
+.leaf div:nth-child(6){
+    left:15%; 
+    animation:fall 21s linear infinite ;
+    animation-delay:-10s;
+}
+
+.leaf div:nth-child(7){
+    left:90%; 
+    animation:fall 15s linear infinite ;
+    animation-delay:-4s;
+}
+    
+@keyframes fall{
+    0%{
+        opacity:1;
+        top:-10%;
+        transform:translateX (20px) rotate(0deg);
+    }
+    20%{
+        opacity:0.8;
+        transform:translateX (-20px) rotate(45deg);
+    }
+    40%{
+        transform:translateX (-20px) rotate(90deg);
+        }
+    60%{   
+        transform:translateX (-20px) rotate(135deg); 
+    }
+    80%{
+        transform:translateX (-20px) rotate(180deg);
+    }
+    100%{ 
+        top:110%;
+        transform:translateX (-20px) rotate(225deg);
+    }
+
+}
+
+.leaf1 {
+    transform: rotateX(180deg);
+}
+    
+
+    @media screen and (max-width: 800px) {
+        h3 {
+            font-size: 1.5em;
+        }
+        h1 {font-size: 3em;
+        }
+       }
+
+    @media screen and (max-width: 600px) {
+        h3 {
+            font-size: 1em;
+        }
+         h1 {font-size: 2em;
+        }
+    }
+
+    @media screen and (max-width: 350px) {
+        h3 {
+            font-size: 0.75em;
+        }
+        h1 {font-size: 1.5em;
+        }
+        #player {
+            height: 2em ;
+            margin-top: 1em;
+        }
+        button {
+            border-radius: 20px;
+            padding: 0.3em 0.75em;
+            font-size: 0.75em;
+            margin: 1.5em;
+            border-width: 5px;
+        }
+        button:hover {
+            font-size: 0.85em;
+
+        }
+    }
